# ia-agent-fwk

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: default.yaml  development.yaml  production.yaml  staging.yaml  testing.yaml
docker/: .dockerignore  Dockerfile  deploy.sh  docker-compose.prod.yml  docker-compose.selfhosted-native-ollama.yml  docker-compose.selfhosted.yml  entrypoint.sh
docker/grafana/dashboards/: agent-system.json  docker-stats.json  execution-layer.json  ia-agent-fwk.json  integrations.json  llm-providers.json  logs-explorer.json  memory-api-layer.json  multi-agent-orchestration.json  rag-pipeline.json  security-hardening.json  streaming.json  tools-system.json
docker/loki/: loki-config.yml
docker/prometheus/: prometheus.yml
docker/promtail/: promtail-config.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  CREATING_AGENTS.md  CREATING_PLUGINS.md  CREATING_TOOLS.md  DEPLOYMENT.md  GETTING_STARTED.md  INTEGRATIONS.md
documents/: contrato_proveedor_2025.txt  factura_marzo_2025.txt  sample_invoice.txt
examples/customer_support/: README.md  agent.py  config.yaml
examples/customer_support/data/: faq.json  tickets.json
examples/document_processor/: README.md  agent.py  config.yaml
examples/document_processor/data/: sample_contract.txt  sample_report.txt
examples/finance/: README.md  __init__.py  agent.py  config.yaml
examples/finance/data/: financial_statements.json  transactions.json
infra/ansible/: .env.example  .gitignore  ansible.cfg  ansible.sh
infra/ansible/inventory/: hosts.yml
infra/ansible/playbooks/: deploy.yml  teardown.yml  update.yml
infra/aws/: .env.example  .gitignore  awscli.sh  docker-compose.yml  ec2.sh  main.tf  outputs.tf  terraform.tfvars.example  tf.sh  user_data.sh  variables.tf
scripts/: demo.sh  generate_orchestration_dashboard.py  generate_rag_pipeline_dashboard.py  generate_security_dashboard.py  generate_streaming_dashboard.py  generate_tools_dashboard.py  init-db.sql
src/ia_agent_fwk/: __init__.py
src/ia_agent_fwk/agents/: __init__.py  base.py  config.py  context.py  exceptions.py  factory.py  protocols.py  reasoning.py  registry.py  state.py
src/ia_agent_fwk/api/: __init__.py  app.py  dependencies.py  middleware.py  models.py
src/ia_agent_fwk/config/: __init__.py  loader.py  profiles.py  settings.py
src/ia_agent_fwk/conversation/: __init__.py  __main__.py  agent.py  classifier.py  cli.py  context.py  endpoints.py  llm_client.py  metrics.py  server.py  session.py
src/ia_agent_fwk/execution/: __init__.py  celery_app.py  exceptions.py  manager.py  models.py  scheduler.py  tasks.py  triggers.py
src/ia_agent_fwk/ingestion/: __init__.py  classifier.py  cleaner.py  config_provider.py  context_assembly.py  contextual_enrichment.py  embedding_store.py  enrichment.py  faq_ingestor.py  hybrid_store.py  manifest.py  models.py  orchestrator.py  parsers.py  post_processing.py  providers.py  query_expansion.py  query_pipeline.py  storage.py  worker.py
src/ia_agent_fwk/integrations/: __init__.py  base.py  email_channel.py  exceptions.py  models.py  router.py  slack.py  whatsapp.py
src/ia_agent_fwk/llm/: __init__.py  base.py  circuit_breaker.py  cost.py  exceptions.py  factory.py  models.py  retry.py  streaming.py
src/ia_agent_fwk/memory/: __init__.py  base.py  exceptions.py  factory.py  models.py
src/ia_agent_fwk/observability/: __init__.py  exceptions.py  logging.py  metrics.py  middleware.py  prompt_log.py  tracing.py
src/ia_agent_fwk/orchestration/: __init__.py  agent_tool.py  base.py  builder.py  conditional.py  exceptions.py  models.py  parallel.py  sequential.py  supervisor.py
src/ia_agent_fwk/plugins/: __init__.py  base.py  discovery.py  exceptions.py  loader.py  manager.py  models.py
src/ia_agent_fwk/rag/: __init__.py  exceptions.py  factory.py  models.py  pipeline.py  store.py
src/ia_agent_fwk/security/: __init__.py  audit.py  budget.py  exceptions.py  input_guard.py  middleware.py  output_guard.py  rate_limiter.py  sanitizer.py
src/ia_agent_fwk/streaming/: __init__.py  exceptions.py  models.py  sse.py  websocket.py
src/ia_agent_fwk/tools/: __init__.py  base.py  config.py  exceptions.py  executor.py  permissions.py  registry.py
tests/: conftest.py
tests/integration/test_api/: conftest.py  test_full_flow.py
tests/integration/test_llm/: conftest.py  test_anthropic_integration.py  test_ollama_integration.py  test_openai_integration.py
tests/integration/test_rag_evaluation/: __init__.py  conftest.py  dataset.py  llm_judge.py  metrics.py  run_remote.sh  test_rag_bench.py
tests/unit/: test_config.py  test_package.py
tests/unit/test_agents/: conftest.py  test_base.py  test_config.py  test_context.py  test_exceptions.py  test_factory.py  test_integration.py  test_memory_integration.py  test_protocols.py  test_reasoning.py  test_registry.py  test_state.py
tests/unit/test_api/: conftest.py  test_agents.py  test_app.py  test_conversations.py  test_health.py  test_middleware.py  test_models.py  test_schedules.py  test_triggers.py
tests/unit/test_examples/: test_customer_support.py  test_document_processor.py  test_finance.py  test_whatsapp_chatbot.py
tests/unit/test_execution/: conftest.py  test_exceptions.py  test_jobs_api.py  test_manager.py  test_models.py  test_scheduler.py  test_tasks.py  test_triggers.py
tests/unit/test_integrations/: conftest.py  test_api_integrations.py  test_base.py  test_email.py  test_email_imap.py  test_exceptions.py  test_models.py  test_router.py  test_slack.py  test_whatsapp.py
tests/unit/test_llm/: conftest.py  test_anthropic_provider.py  test_base.py  test_circuit_breaker.py  test_cost.py  test_exceptions.py  test_factory.py  test_huggingface_provider.py  test_integration.py  test_models.py  test_ollama_provider.py  test_openai_provider.py  test_retry.py  test_streaming.py  test_vllm_provider.py
(+153 files in other folders)
